Atualiza espaçamento da imagem e ajustes visuais

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 
     #resultado {
       margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
       font-size: 1.1rem;
+      background-color: #fbbd17;
+      border-radius: 15px;
     }
   </style>
 </head>
@@ -122,7 +126,12 @@
     <div id="resultado"></div>
 
     <div class="logos">
-        <img src="https://www.dropbox.com/scl/fi/qteisfgobusjg6892oamc/Design-sem-nome-4.png?rlkey=jdv7ll6rjdhmzwq9hwmd6iqcu&st=u7mqifnk&dl=1" alt="Logo" width="250" height="40">
+        <img
+    src="https://www.dropbox.com/scl/fi/qteisfgobusjg6892oamc/Design-sem-nome-4.png?rlkey=jdv7ll6rjdhmzwq9hwmd6iqcu&st=u7mqifnk&dl=1"
+    alt="Logo"
+    width="250"
+    height="40"
+    style="margin-bottom: 20px;"
     </div>
   </div>
 
