--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="cpf-section" style="display: flex; align-items: center; justify-content: center; gap: 10px;">
         <input type="text" id="cpfInput" placeholder="CPF" />
         <button onclick="buscarCPF()">Buscar</button>
-        <img src="https://www.dropbox.com/scl/fi/4hteabjpus785l5qmujih/Design-sem-nome-6.png?rlkey=7c1dh5gqmn9lsjagfj2sahrp5&st=mj0g3lhc&dl=1" alt="Logo" style="margin-bottom: 20px;width: 100%">
+        <img src="https://www.dropbox.com/scl/fi/4hteabjpus785l5qmujih/Design-sem-nome-6.png?rlkey=7c1dh5gqmn9lsjagfj2sahrp5&st=mj0g3lhc&dl=1" alt="Logo">
     </div>
 
     <!-- Resultado da busca -->
@@ -134,7 +134,7 @@
         <img
             src="https://www.dropbox.com/scl/fi/6w6f4g6iqperdc1qxu4ku/Design-sem-nome-7.png?rlkey=2luuewrbz5k04qofc8ghy8jv6&st=jd5hvgf6&dl=1"
             alt="Logo"
-            style="margin-bottom: 20px;width: 100%">
+            style="margin-bottom: 20px;">
     </div>
   </div>
 
