--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 
     <!-- Frase de destaque -->
     <div class="frase">
+      <h2><strong>Parabéns!</strong><br></h2>
       <p>
-        <strong>Parabéns!</strong><br>
         <strong>Você é mais que um cliente Premium.</strong><br>
         Você e o seu bebê foram escolhidos para a nossa campanha de experimentação!
       </p>
